tests/codegen/fail/union/trait_with_attr_on_method.stderr
error: GraphQL union cannot use #[graphql(with = ...)] attribute on a trait method
       · note: https://spec.graphql.org/October2021#sec-Unions
       · note: instead use #[graphql(ignore)] on the method with #[graphql_union(on ... = ...)] on the trait itself

 --> fail/union/trait_with_attr_on_method.rs:5:15
  |
5 |     #[graphql(with = something)]
  |               ^^^^

error: cannot find attribute `graphql` in this scope
 --> fail/union/trait_with_attr_on_method.rs:5:7
  |
5 |     #[graphql(with = something)]
  |       ^^^^^^^
  |
  = note: `graphql` is an attribute that can be used by the derive macros `GraphQLEnum`, `GraphQLInputObject`, `GraphQLInterface`, `GraphQLObject`, `GraphQLScalar` and `GraphQLUnion`, you might be missing a `derive` attribute
